# mcp-from-first-principles

./: .gitignore  LICENSE  README.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  CLAUDE.md
frontend/src/api/: index.ts  mock.ts  types.ts
frontend/src/components/: ArgumentForm.tsx  ChatThread.tsx  LeftRail.tsx  PrimitiveList.tsx  WireLogPane.tsx
frontend/src/components/cards/: CardShell.tsx  PromptCard.tsx  ResourceCard.tsx  ToolCard.tsx  types.ts
frontend/src/components/renderers/: JsonRenderer.tsx  MarkdownRenderer.tsx  PdfRenderer.tsx
frontend/src/hooks/: useChatThread.ts  useConnectionState.ts  useServerInfo.ts  useWireLog.ts
frontend/src/styles/: globals.css
mcp_server/: main.py  pyproject.toml
mcp_server/src/: config.py  tools.py
